# DocumentClassification

./: .dockerignore  .env.template  .gitdiff  .gitignore  Dockerfile.ocr  Dockerfile.predictor  Dockerfile.processor  Dockerfile.summarizer  Dockerfile.web  README.en.md  README.md  docker-compose.yml  harmonogram_projektu.md  harmonogram_projektu.txt  init-ollama.sh  pyproject.toml  requirements.txt  setup-services.sh
.github/: dependabot.yml
.github/workflows/: docker-build.yml  ruff.yml
db/: init.sql
src/configs/: database_config.py  model_config.py  ocr_config.py  processor_config.py  summarization_config.py
src/database/: __init__.py  connections.py  dependencies.py  exceptions.py  models.py  repository.py  schemas.py
src/documentclassification/ocr/: ocr.py  optimized_ocr.py
src/documentclassification/process/: process.py
src/encryption/: aes.py
src/ocr/: easy_ocr_wrapper.py  ocr.py  optimized_ocr.py  tesseract.py  tesseract_wrapper.py  watcher.py
src/payload/: model_models.py  ocr_models.py  predictor_models.py  processor_models.py  shared_models.py  summarizer_models.py
src/predictor/: layoutlm_wrapper.py  llm_model.py  model.py  predictor.py
src/processor/: dataset.py  processor.py
src/summarization/: summarizer.py
src/utils/: utils.py
src/web/: app.py  forms.py  routes.py
src/web/templates/: base.html.j2  edit_document.html.j2  index.html.j2  statistics.html.j2
tests/: test_ocr.py
