[project]
name = "DocumentClassification"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Jakub Zenon Kujawa", email = "ZK_Jakub@proton.me" },
]
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "easyocr>=1.7.2",
    "pdf2image>=1.17.0",
    "fastapi[standard]>=0.115.3",
    "python-multipart>=0.0.16",
    "pillow>=11.0.0",
    "numpy>=2.1.2",
    "rich>=13.9.3",
    "transformers>=4.46.0",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
